apps/budo/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budo-web
  namespace: budo
spec:
  selector:
    app: budo-web
  ports:
    - port: 80
      targetPort: 5000
